syntax = "proto3";

package endpoint.v1;

option java_multiple_files = false;
option java_package = "com.ukonnra.springcqrsestest.endpoint.grpc.proto";
option java_outer_classname = "UserProto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "endpoint/v1/shared.proto";

message User {
  string id = 1;
  google.protobuf.Timestamp created_date = 2;
  uint32 version = 3;
  google.protobuf.Timestamp deleted_date = 4;

  string login_name = 5;
  string display_name = 6;
  bool system_admin = 7;
  endpoint.v1.Permission permission = 8;
}

message UserQuery {
  repeated string id = 1;
  repeated string login_name = 2;
  string full_text = 3;
}

message UserServiceFindOneRequest {
  UserQuery query = 1;
}

message UserServiceFindOneResponse {
  User value = 1;
}

message UserServiceFindAllRequest {
  UserQuery query = 1;
  uint32 size = 2;
}

message UserServiceFindAllResponse {
  repeated User values = 1;
}

message UserCommandCreate {
  string login_name = 1;
  string display_name = 2;
  bool system_admin = 3;
}

message UserCommandUpdate {
  string id = 1;
  string login_name = 2;
  string display_name = 3;
  google.protobuf.BoolValue system_admin = 4;
}

message UserCommandDelete {
  string id = 1;
}

message UserCommandBatch {
  repeated UserCommandCreate create = 1;
  repeated UserCommandUpdate update = 2;
  repeated string delete = 3;
}

message UserServiceHandleCommandRequest {
  oneof command {
    UserCommandCreate create = 1;
    UserCommandUpdate update = 2;
    UserCommandDelete delete = 3;
    UserCommandBatch batch = 4;
  }
}

message UserServiceHandleCommandResponse {

}

service UserService {
  rpc FindOne(UserServiceFindOneRequest) returns (UserServiceFindOneResponse);
  rpc FindAll(UserServiceFindAllRequest) returns (UserServiceFindAllResponse);
  rpc HandleCommand(UserServiceHandleCommandRequest) returns (UserServiceHandleCommandResponse);
}
